<resources>
    <string name="app_name">SmartOoz</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>
    <string name="title_activity_parcours">Parcours</string>
    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Identifiant ou Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_email">Adresse mail invalide</string>
    <string name="error_invalid_password">Mot de passe trop court</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="create_account_button_text">Créer son compte</string>

    <!-- Strings related to sign up -->
    <string name="error_different_pass">Mots de passe différents</string>
    <string name="search_hint">Recherche</string>
    <string name="visiter_lyon">Visiter Lyon</string>
    <string name="cr_er_parcours">Créer parcours</string>
    <string name="title_activity_creer_parcours">Map</string>
    <string name="action_ajouter">Ajouter un point d\'intérêt</string>
    <string name="title_activity_circuit_details">Détails du circuit</string>
    <string name="confirmer_parcours">Valider le parcours</string>
    <string name="smartooz_inscription">SmartOoz - Inscription</string>
    <string name="choisissez_un_nom_pour_votre_parcours">Choisissez un nom pour votre parcours</string>
    <string name="ajoutez_des_tags_votre_parcours">Ajoutez des tags à votre parcours</string>
    <string name="ok">OK</string>
    <string name="filter_notes">Notes</string>
    <string name="filter_denivele">Dénivelé</string>
    <string name="filter_km">Kilomètre</string>
    <string name="filter_popularity">Popularité</string>
    <string name="title_activity_congratulations_circuit_end">Félicitations - parcours terminé</string>
    <string name="cr_er_le_parcours">Créer le parcours</string>
    <string name="lancer_ce_parcours">Lancer ce parcours</string>

</resources>
