<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="50dp"
        tools:context=".Activities.CreerParcours_AjoutTag">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/choisissez_un_nom_pour_votre_parcours"
            android:id="@+id/inscription_text"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:layout_gravity="top"
            android:layout_marginBottom="0dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nomParcours_editText"
            android:background="@drawable/textfield_border"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:padding="5dp"
            android:singleLine="true"
            android:layout_below="@+id/inscription_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ajoutez_des_tags_votre_parcours"
            android:id="@+id/tags_text"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/nomParcours_editText"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/tags_editText"
            android:background="@drawable/textfield_border"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:padding="5dp"
            android:gravity="top|left"
            android:singleLine="true"
            android:layout_below="@+id/tags_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/bouton_ok"
            android:background="@color/colorAccent"
            android:textColor="#FFFFFFFF"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</LinearLayout>




